# todo

./: .env  compose.yml
backend/: Cargo.toml  README.md
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/api/: Cargo.toml
backend/api/src/: authority.rs  db.rs  grahpql.rs  lib.rs
backend/api/src/graphql/: schema.rs
backend/api/src/graphql/mutation/: mod.rs  task.rs  user.rs
backend/api/src/graphql/object/: user.rs
backend/api/src/graphql/query/: mod.rs  task.rs  user.rs
backend/db/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  task.rs  user.rs
backend/migration/: Cargo.toml  README.md
backend/migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20221002_115406_create_tasks_table.rs  m20221025_092604_add_user_sub_to_tasks.rs  m20221025_093208_remove_user_id_from_tasks.rs  m20221025_101115_drop_users.rs
backend/repository/: Cargo.toml
backend/repository/src/: lib.rs  task.rs  user.rs
frontend/: package.json
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/pages/: _app.tsx
