[package]
edition = "2021"
name = "api"
version = "0.1.0"

[dependencies]
anyhow = "1.0.65"
async-graphql = "4.0"
async-graphql-axum = "4.0"
axum = {version = "0.5.16", features = ["ws", "headers"]}
http = "0.2.8"
hyper = "0.14.20"
sea-orm = {version = "0.9.3", features = ["debug-print", "sqlx-mysql", "runtime-tokio-native-tls", "macros"]}
# serde = {version = "1.0.85", features = ["derive"]}
# serde_json = "1.0.85"
db = {path = "../db"}
entity = {path = "../entity"}
tokio = {version = "1.21.2", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
