[package]
edition = "2021"
name = "repository"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.85", features = ["derive"]}

[dependencies.async-graphql]
version = "4.0"

[dependencies.sea-orm]
version = "0.10.0"
